# HotReloadKit

./: CMakeLists.txt  READMD.md
data/configs/: app.json  render.yaml
data/resources/: welcome.txt
include/hotreload/: directory_scanner.h  file_watcher.h  hot_reload_app.h  resource_store.h  types.h
src/: directory_scanner.cpp  file_watcher.cpp  hot_reload_app.cpp  main.cpp  resource_store.cpp  types.cpp
